selfhost/test/typechecker/invocation/function_as_param_error_arity.out
Error at %FILE_NAME%:4:5
Type mismatch for parameter 'fn'
  |  foo(negate)
         ^
Expected: (Int) => Int
but instead found: (Int, Bool) => Int
